# gexnetpy

./: CMakeLists.txt
include/: clist.hpp  pch.hpp
src/: main.cpp  network.cpp
